--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "react-tilt": "^1.0.2",
